--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@ html {
   --image-height: var(--image-width);
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 h1,
 h2,
 h3,
@@ -15,6 +21,7 @@ h6 {
 
 header {
   padding: 0.5rem 0;
+  height: 90.5px;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -28,7 +35,9 @@ header {
 }
 
 #help-container {
+  box-sizing: content-box;
   display: flex;
+  height: 20px;
   position: relative;
   cursor: pointer;
   margin-top: 0.25rem;
@@ -41,7 +50,8 @@ header {
   grid-column: 1 / 2;
   grid-row: 1 / 4;
   padding-right: 0.5rem;
-  align-self: center;
+  padding-top: 5px;
+  align-self: baseline;
 }
 
 #header-right {
@@ -88,4 +98,8 @@ button {
 
 .toggle-modal {
   display: none;
+}
+
+#help-container:hover {
+  border-bottom: 1px solid #cf7397;
 }
