refactoring the Game component to better handle state. succeeded in only re-rendering the Game component on button clicks instead of when the helpModal is toggled. async nature of the render is affecting the game play. need to re-work the flow of the game's state management.

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ header {
   display: flex;
   height: 20px;
   position: relative;
-  cursor: pointer;
+  cursor: default;
   margin-top: 0.25rem;
   justify-content: center;
   align-items: center;
@@ -84,6 +84,11 @@ header {
 svg {
   height: var(--image-height);
   width: var(--image-width);
+}
+
+.icon-btns {
+  display: flex;
+  align-items: center;
 }
 
 .icon-btns:hover {
