added a Footer component. styled the page to fix the footer. tweaked some style to the Scoreboard.

--- a/src/styles/Scoreboard.css
+++ b/src/styles/Scoreboard.css
@@ -8,3 +8,9 @@
   width: 135px;
   justify-content: space-between;
 }
+
+#scoreboard-title {
+  text-decoration: underline;
+  padding-bottom: 0.25rem;
+  color: #cf7397;
+}
