--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 html {
   --image-width: 5rem;
   --image-height: var(--image-width);
+  height: 100%;
+}
+
+body,
+#root {
+  height: 100%;
 }
 
 *,
@@ -59,17 +65,21 @@ header {
 }
 
 #app-container {
+  height: 100%;
   width: 100%;
+  max-width: 1440px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
 #image-container {
   display: grid;
-  width: calc(var(--image-width) * 5.625);
-  height: calc(var(--image-width) * 5.625);
+  width: calc(var(--image-width) * 5.5);
+  height: calc(var(--image-width) * 5.5);
+  /* width: auto; */
+  /* height: auto; */
   grid-template-columns: repeat(4, var(--image-width));
   grid-template-rows: repeat(4, var(--image-width));
   column-gap: calc(var(--image-width) / 2);
@@ -77,18 +87,21 @@ header {
 }
 
 .images {
-  width: auto;
-  height: auto;
+  /* width: auto; */
+  /* height: auto; */
 }
 
 svg {
   height: var(--image-height);
   width: var(--image-width);
+  padding: 0.25rem;
 }
 
 .icon-btns {
   display: flex;
   align-items: center;
+  padding: 0;
+  margin: 0;
 }
 
 .icon-btns:hover {
@@ -98,6 +111,7 @@ svg {
 #help-icon {
   height: 18px;
   width: 18px;
+  padding: 0;
   padding-right: 0.25rem;
 }
 
@@ -111,4 +125,23 @@ button {
 
 #help-container:hover {
   border-bottom: 1px solid #cf7397;
+}
+
+footer {
+  display: flex;
+  align-items: flex-end;
+  flex-grow: 2;
+  margin-bottom: 10px;
+}
+
+#github-footer-icon {
+  padding: 0;
+  margin: 0;
+  margin-left: 10px;
+  width: 20px;
+  height: 20px;
+}
+
+#footer-msg {
+  padding-bottom: 3px;
 }
