tweaked components to display the modals using react Portal. modal styling could be improved but the functionality appears to work- verdict remains if it works when deployed

--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,12 @@ html {
   --image-width: 5rem;
   --image-height: var(--image-width);
   height: 100%;
+  width: 100%;
 }
 
 body,
 #root {
+  width: 100%;
   height: 100%;
 }
 
