--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -1,17 +1,18 @@
 #help-modal-container,
 #gameover-modal-container {
-  position: absolute;
+  position: fixed;
+  cursor: default;
   z-index: 10;
-  left: 0;
-  top: 1.5rem;
+  left: 50px;
+  top: 92px;
   width: 300px;
   overflow: auto;
-  background-color: #fdebef;
+  background-color: #f0f0f0;
 }
 
 #gameover-modal-container {
   position: fixed;
-  cursor: default;
+  left: 0;
   top: 0;
   width: 100%;
   height: 100%;
@@ -25,7 +26,7 @@
   padding: 0.5rem;
   width: 250px;
   max-width: 100%;
-  background-color: #fdebef;
+  background-color: #f0f0f0;
 }
 
 #gameover-modal-content {
@@ -59,4 +60,17 @@ li {
   font-weight: bolder;
   color: #cf7397;
   text-decoration: underline;
+}
+
+.modal-btn {
+  font-weight: bold;
+  font-size: 1rem;
+  height: 30px;
+  width: 100px;
+  background-color: #f9c9d4;
+  border-radius: 0.5rem;
+}
+
+.modal-btn:hover {
+  background-color: #cf7397;
 }
