--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -2,7 +2,7 @@
 #gameover-modal-container {
   position: fixed;
   cursor: default;
-  z-index: 10;
+  /* z-index: 10; */
   left: 50px;
   top: 92px;
   width: 300px;
