--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -65,10 +65,14 @@ li {
 .modal-btn {
   font-weight: bold;
   font-size: 1rem;
-  height: 30px;
+  height: 50px;
   width: 100px;
   background-color: #f9c9d4;
   border-radius: 0.5rem;
+}
+
+#play-again-btn {
+  width: 125px;
 }
 
 .modal-btn:hover {
